--- a/application/templates/admin/login.html
+++ b/application/templates/admin/login.html
@@ -1,7 +1,7 @@
 {% extends "admin/layout.html" %} {% block content %}
 <form method="POST">
         {% for msg in get_flashed_messages(category_filter=["err"]) %}
-        <p class="tag_add-box-msg" style="color:red">{{ msg }}</p>
+        <p style="color:red">{{ msg }}</p>
         {% endfor %}
     <div class="form-group">
         <label>Username</label>
