--- a/application/templates/admin/oplog_list.html
+++ b/application/templates/admin/oplog_list.html
@@ -2,7 +2,7 @@
 {% import "ui/admin_page.html" as pg %}
 {% block content %}
 
-<section class="content" id="showcontent">
+<section class="content">
     <div class="row">
         <div class="col-md-12">
             <div class="box box-primary">
