--- a/application/templates/admin/art_list.html
+++ b/application/templates/admin/art_list.html
@@ -1,35 +1,25 @@
 {% extends "admin/admin.html" %} {% import "ui/admin_page.html" as pg %} {% block content %}
 
-<section class="content" id="showcontent">
+<section class="content">
     <div class="row">
         <div class="col-md-12">
             <div class="box box-primary">
                 <div class="box-header">
                     <h3 class="box-title">Article list</h3>
-                    <div class="box-tools">
-                        <div class="input-group input-group-sm" style="width: 150px;">
-                           
 
-                            <div class="input-group-btn">
-                                <button type="submit" class="btn btn-default">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
                 </div>
                 <div class="box-body table-responsive no-padding">
                     {% for msg in get_flashed_messages(category_filter=["ok"]) %}
-                        <p class="tag_add-box-msg" style="color:green">{{ msg }}</p>
+                    <p style="color:green">{{ msg }}</p>
                     {% endfor %}
                     <table class="table table-hover">
                         <tbody>
                             <tr>
                                 <th>id</th>
                                 <th>Title</th>
-                                
+
                                 <th>Tag</th>
-                                
+
                                 <th>Read</th>
                                 <th>Comment number</th>
                                 <th>Release time</th>
@@ -39,9 +29,9 @@
                             <tr>
                                 <td>{{ v.id }}</td>
                                 <td>{{ v.title }}</td>
-                                
+
                                 <td>{{ v.tag.name }}</td>
-                                
+
                                 <td>{{ v.readnum }}</td>
                                 <td>{{ v.commentnum }}</td>
                                 <td>{{ v.addtime }}</td>
