--- a/application/templates/admin/pwd.html
+++ b/application/templates/admin/pwd.html
@@ -3,7 +3,7 @@
     <h1>Administration</h1>
 
 </section>
-<section class="content" id="showcontent">
+<section class="content">
     <div class="row">
         <div class="col-md-12">
             <div class="box box-primary">
@@ -13,12 +13,12 @@
                 <form role="form" method="post">
                     <div class="box-body">
                         {% for msg in get_flashed_messages(category_filter=["ok"]) %}
-                        <p class="tag_add-box-msg" style="color:green">{{ msg }}</p>
+                        <p>style="color:green">{{ msg }}</p>
                         {% endfor %} {% for msg in get_flashed_messages(category_filter=["err"]) %}
-                        <p class="tag_add-box-msg" style="color:red">{{ msg }}</p>
+                        <p style="color:red">{{ msg }}</p>
                         {% endfor %}
                         <div class="form-group">
-                            <label for="input_pwd">{{ form.old_pwd.label }}</label>
+                            <label>{{ form.old_pwd.label }}</label>
                             {{ form.old_pwd }} {% for err in form.old_pwd.errors %}
                             <div class="col-md-12">
                                 <font style="color:red">{{ err }}</font>
@@ -26,7 +26,7 @@
                             {% endfor %}
                         </div>
                         <div class="form-group">
-                            <label for="input_newpwd">{{ form.new_pwd.label }}</label>
+                            <label>{{ form.new_pwd.label }}</label>
                             {{ form.new_pwd }} {% for err in form.new_pwd.errors %}
                             <div class="col-md-12">
                                 <font style="color:red">{{ err }}</font>
