--- a/application/templates/home/artcol.html
+++ b/application/templates/home/artcol.html
@@ -1,5 +1,6 @@
 {% extends "home/home.html" %} 
 {% import "ui/admin_page.html" as pg %}
+
 {% block content %} {% include "home/menu.html" %}
 <div class="col-md-9">
     <div class="panel panel-warning">
@@ -8,12 +9,12 @@
                 <span class="glyphicon glyphicon-map-marker"></span>&nbsp;Liked articles</h3>
         </div>
         <div class="panel-body" style="margin-top: 20px">
-            <div class="col-md-12">
+            <ul class="col-md-12">
                 {% for v in page_data.items %}
-                <div class="media">
+                <div >
                     
-                    <div class="media-body">
-                        <h4 class="media-heading">{{ v.art.title }}
+                    <div>
+                        <h4>{{ v.art.title }}
                             <a href="{{ url_for('home.read',id=v.art_id,page=1) }}" class="label label-primary pull-center">
                                 <span></span>Read</a>
                         </h4>
@@ -21,7 +22,7 @@
                     </div>
                 </div>
 
-            </div>
+            </ul>
             {% endfor %}
             <div class="col-md-12 text-center" style="margin-top:6px;">
                 {{ pg.page(page_data,'home.artcol') }}
