--- a/application/templates/home/index.html
+++ b/application/templates/home/index.html
@@ -49,11 +49,11 @@
             <div class="col-md-3">
                 <div>
                    
-                    <div class="text-left" >
+                    <ul class="text-left" >
                         <h3>{{ v.title }}</h3>
                         <a href="{{ url_for('home.read',id=v.id,page=1) }}" class="btn btn-primary" target="_blank" role="button">
                         &nbsp;Read</a>
-                    </div>
+                        </ul>
                     
                 </div>
             </div>
