--- a/application/templates/home/index.html
+++ b/application/templates/home/index.html
@@ -46,17 +46,17 @@
                 </table>
             </div>
             {% for v in page_data.items %}
-            <div class="col-md-3">
+            <ul class="col-md-3">
                 <div>
                    
-                    <ul class="text-left" >
+                    <div class="text-left" >
                         <h3>{{ v.title }}</h3>
                         <a href="{{ url_for('home.read',id=v.id,page=1) }}" class="btn btn-primary" target="_blank" role="button">
                         &nbsp;Read</a>
-                        </ul>
+                    </div>
                     
                 </div>
-            </div>
+            </ul>
             {% endfor %}
             <div class="col-md-12">
                 {{ pg.page(page_data,'home.index') }}
