--- a/application/templates/home/index.html
+++ b/application/templates/home/index.html
@@ -46,8 +46,8 @@
                 </table>
             </div>
             {% for v in page_data.items %}
-            <ul class="col-md-3">
-                <div>
+            <div class="col-md-3">
+                <ul>
                    
                     <div class="text-left" >
                         <h3>{{ v.title }}</h3>
@@ -55,8 +55,8 @@
                         &nbsp;Read</a>
                     </div>
                     
-                </div>
-            </ul>
+                <ul>
+            </div>
             {% endfor %}
             <div class="col-md-12">
                 {{ pg.page(page_data,'home.index') }}
