return to the front page when clicking 'Learning Programming'

--- a/application/templates/home/home.html
+++ b/application/templates/home/home.html
@@ -25,6 +25,7 @@
 
                 <a href="{{ url_for('home.index',page=1) }}" class="navbar-brand" style="width:250px;">
                     <img src="{{ url_for('static',filename='base/image/logo.jpeg') }}" style="height:30px;">&nbsp;Learning Programming
+                    <h5>(Click here to return to the front page)</h5>
                 </a>
             </div>
 
